--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,33 +1,28 @@
-name: CI/CD Pipeline
+name: Python CI/CD
 
 on:
   push:
     branches:
-      - main
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Скачиваем код из репозитория
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    # 2. Устанавливаем Node.js
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-    # 3. Устанавливаем зависимости
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    # 4. Запускаем тесты
-    - name: Run tests
-      run: npm test
-
-    # 5. Разворачиваем проект (просто пример)
-    - name: Deploy
-      run: echo "Deploying the app..."
+      - name: Run tests
+        run: pytest  # Выполняет тесты
