--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,30 +1,38 @@
-name: Python CI
+name: Run Tests Daily
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  schedule:
+    - cron: '0 10 * * *'  # Запуск каждый день в 10:00
 
 jobs:
-  test:
+  run-tests:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.9
-      
+          python-version: '3.x'
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      - name: Run tests
-        run: pytest
+
+      - name: Run Tests
+        run: |
+          pytest
+
+      - name: Notify on Errors
+        if: failure()
+        uses: actions/github-script@v3
+        with:
+          script: |
+            github.rest.issues.create(
+              owner: ${{ github.repository_owner }},
+              repo: ${{ github.repository }},
+              title: "Test Failure Alert",
+              body: "Tests failed. Please check the logs."
+            )
+
